Fix weird spacing on nav items.

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 400px;
 }
-/* Not being used at the moment 
+/* Not being used at the moment
 #itop .sbar {
   width: 100%;
   height: 60px;
@@ -66,7 +66,13 @@ nav li:hover {
   -webkit-transition: 200ms;
 }
 
+nav .items {
+  display:inline-block;
+  margin:0 auto;
+}
+
 nav a {
+  float:left;
   text-decoration: none;
   color: #222;
   font-size: 17px;
